# WCPG

./: CMakeLists.txt  configure.ac
WCPG/: clapack_functions_config.c  clapack_functions_config.h  inclusion_verif.c  mpfi_matrix.c  mpfi_matrix.h  mpfr_linalg.h  mpfr_matrix.c
cmake/: FindGMP.cmake  FindLAPACK.cmake  FindMPFI.cmake  FindMPFR.cmake
cmake_debug/: CmakeLists.txt  FindGMP.cmake  FindLAPACK.cmake  FindMPFI.cmake  FindMPFR.cmake
